Events improve photos

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -244,10 +244,10 @@ Attended:
 
 - Feb 4-6 - [Africa Tech Summit](https://www.africatechsummit.com/kigali/) - Kigali, Rwanda. @akinsawyerr and @beansgum attended this 600+ visitor event and Akin shared his experience of connecting with regulators, startups and VCs in a [full report](https://github.com/decredcommunity/events/blob/master/reports/20200204-africa-tech-summit-kigali-rwanda.md). "When Decred is ready to actively pursue use cases that build on our stack there will be a lot of open and able hands available to engage with".
 - Feb 6 - [Decred Global Meetup](https://www.meetup.com/Chicago-Decred-Meetup/events/267784883/) - Chicago, USA. ([notes](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158109310014665NneQF:decred.org))
-- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268457863/) - Belo Horizonte - Brazil. ([photo](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158103220814414Mzamc:decred.org))
-- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-en-buenos-aires-tickets-90817259869) - Buenos Aires, Argentina. Hosted by @EspacioBitcoin. (photos: [1](https://twitter.com/plabarta_/status/1225595614324498433), [2](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158103346814429gFjNa:decred.org))
-- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-ciudad-de-mexico-en-bitcoin-embassy-bar-tickets-90619377999) - Mexico City, Mexico. Hosted by Bitcoin Embassy Bar. ([photo](https://twitter.com/bitcoinemb/status/1225602840808345602), [video](https://twitter.com/Decred_ES/status/1225656932431626241))
-- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268449660/) - Natal, Brazil. @guisso: "funny part of the t-shirts is that at the beginning they were displayed on the entrance table and nobody showed interest, but at the end of the event, when they got to know the project, everyone wanted to participate in the draw". ([photo](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119754415294gLBgk:decred.org))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268457863/) - Belo Horizonte - Brazil. ([photo](https://twitter.com/Jackson_Duarte/status/1225722800972890112))
+- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-en-buenos-aires-tickets-90817259869) - Buenos Aires, Argentina. Hosted by @EspacioBitcoin. ([photos](https://twitter.com/cryptorc_tech/status/1225879454158901248))
+- Feb 6 - [Decred Global Meetup](https://www.eventbrite.com/e/decredglobalmeetup-ciudad-de-mexico-en-bitcoin-embassy-bar-tickets-90619377999) - Mexico City, Mexico. Hosted by Bitcoin Embassy Bar. ([photos](https://twitter.com/bitcoinemb/status/1228091984906113025), [video](https://twitter.com/Decred_ES/status/1225656932431626241))
+- Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268449660/) - Natal, Brazil. @guisso: "funny part of the t-shirts is that at the beginning they were displayed on the entrance table and nobody showed interest, but at the end of the event, when they got to know the project, everyone wanted to participate in the draw". ([photo](https://twitter.com/_fguisso/status/1225620169654927360))
 - Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268455983/) - Rio de Janeiro, Brazil. There was no shortage of beer. ([photo](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158119750815292FWqOn:decred.org))
 - Feb 6 - [Decred Global Meetup](https://www.meetup.com/DecredBrasil/events/268456316/) - São Paulo, Brazil. ([photo](https://twitter.com/Decred_ES/status/1225574822928928768))
 - Feb 6 - [Discover Decred](https://www.meetup.com/DecredCanada/events/268147731/) - Toronto, Canada. ([photo](https://matrix.to/#/!aNPTuiryMFmdMQWUzb:decred.org/$158104000314467WqrCH:decred.org))
