--- a/journal/202002.md
+++ b/journal/202002.md
@@ -280,26 +280,16 @@ Upcoming:
 
 ## Media
 
-{community efforts: Decred Assembly, websites, etc}
-
-{ratings news}
-
 Selected articles:
 
-- After Four Years, is Decred Better than Bitcoin Yet? by Liam Kelly ([cryptobriefing.com](https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/))
+- Decred 2019 Marketing Report by @Dustorf gives an account of 2019's marketing effort, in which 785K USD was spent (similar to the previous year). The report also has thoughtful reflections on how to evolve and decentralize the project's marketing effort. ([blog.decred.org](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/))
 - Decred On-Chain: Ticket Funding Rates by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-ticket-funding-rates-4e7233c7b64f))
 - Decred On-Chain: Macro + Micro Outlook by @permabullnino ([medium](https://medium.com/@permabullnino/decred-on-chain-macro-micro-outlook-12a26930623e))
-- CryptoEQ gave Decred a Bronze rating, citing concerns with high USD cost to buy a ticket, relatively high inflation compared to other SoV coins, and the cost of a ticket becoming more volatile! ([cryptoeq.io](https://cryptoeq.io/coreReports/decred-abridged))
-- Decred 2019 Marketing Report by @Dustorf gives an account of 2019's marketing effort, in which 785K USD was spent (similar to the previous year). The report also has thoughtful reflections on how to evolve and decentralize the project's marketing effort. ([blog.decred.org](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/))
-- Decred, The Resilient Stronghold by @checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption  ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
-- New issues of the Decred Drive continued to appear every Thursday courtesy of @DecredDragon - thanks also for your kind words about the Journal, from the team.
-- Decred Drive [Feb 6](https://medium.com/@decreddrive/the-decred-drive-feb-6-80b554ab2d71), [Feb 13](https://medium.com/@decreddrive/the-decred-drive-feb-13-e6a35cf1a8fc), [Feb 20](https://medium.com/@decreddrive/the-decred-drive-feb-20-ca37e6d2df), [Feb 27](https://medium.com/@decreddrive/the-decred-drive-feb-27-477baf17051d).
+- Decred, The Resilient Stronghold by @Checkmate, closing the 3 part series by looking at Bitcoin and Decred in terms of resilience, aggregate psychology, and user adoption  ([medium](https://medium.com/decred/decred-the-resilient-stronghold-4038dc64dd2a))
+- New issues of the [Decred Drive](https://medium.com/@decreddrive) continued to appear every Thursday courtesy of @DecredDragon - thanks also for your kind words about the Journal, from the team.
+- CryptoEQ gave Decred a Bronze rating, citing concerns with high USD cost to buy a ticket, relatively high inflation compared to other SoV coins, and the cost of a ticket becoming more volatile ([cryptoeq.io](https://cryptoeq.io/coreReports/decred-abridged))
 - The State of Blockchain: Experts Weigh in on Adoption Around the World by Joseph Birch - featuring @elian on Latam and @AkinSawyerr on Africa ([cointelegraph.com](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world))
-- {title in Title Case} by {author} ([{domain}]({link}) - {optional comment}
-
-{worthy mentions? is it big or good enough for inclusiong?}:
-
-- https://robbreport.com/lifestyle/news/why-now-is-the-best-time-to-invest-in-cryptocurrencies-2898743/ {rr: Decred mention is tiny, no for me. }
+- After Four Years, is Decred Better than Bitcoin Yet? by Liam Kelly ([cryptobriefing.com](https://cryptobriefing.com/after-four-years-is-decred-better-bitcoin-yet/))
 
 Translations:
 
