--- a/journal/202002.md
+++ b/journal/202002.md
@@ -337,13 +337,9 @@ In February DCR was trading between USD 16.71-24.75 / BTC 0.0019-0.0024. The ave
 
 ## Relevant External
 
-{cc tech: PoW, ASIC resistance, full nodes, cc network security, etc}
+The Ethereum ProgPoW debate was re-ignited in style when it was approved to go into a hard fork on the core devs call, resulting in bafflement among many in the wider Ethereum community, where ProgPoW does not have as much support. This [post](https://hudsonjameson.com/2020-03-02-progpow-the-ethereum-community-speaks/) from Hudson Jameson gives an account of the history of ProgPoW and comes to the conclusion that while the change is probably good, threats to maintain a contentious hard fork must be taken seriously and it is not worth forking the network over. The Ethereum community is using a variety of signalling mechanisms, including Twitter [polls](https://twitter.com/crypt0snews/status/1231288498474209280) and EIP [open letters](https://github.com/MidnightOnMars/EIPs/blob/master/EIPS/eip-2538.md) with hashtag campaigns. As Hudson's post details, there have already been extensive efforts to gauge Ethereum community sentiment about ProgPoW, and both a coin vote and miner vote were strongly in favor of ProgPoW. A variety of other methods have been used to gather signals from the community, including [Kialo](https://www.kialo.com/ethereum-and-programmatic-proof-of-work-progpow-30878) and likely a number of Reddit posts. @Checkmate has joined the debate with some [observations](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) on how this is being handled, informed by his experience with Decred's approach. The problem with informal governance is that regardless of the amount of signal collection that takes place and whether everyone has a chance to speak, there will inevitably be a few people who have to make a judgment call and push forward to draw a line under it. It's a messy process and in the end very few people feel satisfied with the outcome.
 
-{DEX}
-
-The Ethereum ProgPoW debate was re-ignited in style when it was approved to go into a hard fork on the core devs call, resulting in bafflement among many in the wider Ethereum community, where ProgPoW does not have as much support. This [post](https://hudsonjameson.com/2020-03-02-progpow-the-ethereum-community-speaks/) from Hudson Jameson gives an account of the history of ProgPoW and comes to the conclusion that while the change is probably good, threats to maintain a contentious hard fork must be taken seriously and it is not worth forking the network over. The Ethereum community is using a variety of signalling mechanisms, including twitter [polls](https://twitter.com/crypt0snews/status/1231288498474209280) and EIP [open letters](https://github.com/MidnightOnMars/EIPs/blob/master/EIPS/eip-2538.md)  with hashtag campaigns. As Hudson's post details, there have already been extensive efforts to gauge Ethereum community sentiment about ProgPoW, and both a coin vote and miner vote were strongly in favor of ProgPoW. A variety of other methods have been used to gather signals from the community, including [Kialo](https://www.kialo.com/ethereum-and-programmatic-proof-of-work-progpow-30878) and any number of reddit posts I'm sure. @checkmate has joined the debate with some [observations](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) on how this is being handled, informed by his experience with Decred's approach. The problem with informal governance is that regardless of the amount of signal collection that takes place and whether everyone has a chance to speak, there will inevitably be a few people who have to make a judgment call and push forward to draw a line under it. It's a messy process and in the end very few people feel satisfied with the outcome.
-
-There are indications of significant [strife](https://decrypt.co/19769/zaki-manian-cosmos-number-two-resigns) at Tendermint, the company behind the Cosmos blockchain - with number two Zaki Manian resigning from Tendermint to form his own Cosmos focused company, saying the CEO (Jae Kwon) is making progress difficult by under-resourcing development and focusing on a new project (Virgo) and twitter persona (@jaesustein). This [update](https://gist.github.com/jaekwon/8861452eea20def46b89dfcc79c9212e#file-zaki_and_ref_god-md) from jaekwon illustrates the unusual degree to which the concept of godliness has come into play in the spat. Cosmos collected $17 million in a 2017 ICO, worth some $1 billion a few months later, in Mar 2019 the project raised another $9 million when the first iteration of the network launched, but the signs now are that progress towards a functioning blockchain hub has been limited since then.
+There are indications of significant [strife](https://decrypt.co/19769/zaki-manian-cosmos-number-two-resigns) at Tendermint, the company behind the Cosmos blockchain - with number two Zaki Manian resigning from Tendermint to form his own Cosmos focused company, saying the CEO (Jae Kwon) is making progress difficult by under-resourcing development and focusing on a new project (Virgo) and Twitter persona (@jaesustein). This [update](https://gist.github.com/jaekwon/8861452eea20def46b89dfcc79c9212e#file-zaki_and_ref_god-md) from Jae illustrates the unusual degree to which the concept of godliness has come into play in the spat. Cosmos collected $17 million in a 2017 ICO, worth some $1 billion a few months later, in Mar 2019 the project raised another $9 million when the first iteration of the network launched, but the signs now are that progress towards a functioning blockchain hub has been limited since then.
 
 Block.one CEO Brendan Blumer [woke](https://twitter.com/BrendanBlumer/status/1232318319061061632) up to find that the rules of the EOS network had been changed overnight, with 15 BPs proposing and passing the change to reduce issuance from 5% to 1%. That it happened is not exactly a surprise, because at no point has any significant effort been put into developing the planned "Worker Proposal System" described in the white paper. The unused 4% has been building up in an unused address, and the accumulated EOS has already been burned once. Why the WPF fund was finally shut down on this particular night 18 months later is a mystery that only the 15 EOS BPs involved know the answer to. Nobody even gave Brendan a heads up! He's fine with it though, rules changing overnight is how decentralized governance works when there are only 15 parties involved.
 
@@ -353,23 +349,15 @@ Binance has been engaged in a [dispute](https://cointelegraph.com/news/binance-r
 
 The privacy implications of Ethereum Name Service (.ens) domains were considered by Tim Copeland in an [article](https://decrypt.co/19423/we-tracked-133000-ethereum-names-and-exposed-their-secrets) in Decrypt. Although many users were aware that they could damage their privacy by linking their domain address to their other addresses, the transaction they used to pay for their .ens could also be used to link them to their funds.
 
-{relevant exchanges and websites}
-
-"interruptions" in XTZ withdrawals {more data would be nice} https://twitter.com/Lindw0rm/status/1227696463574118400 {rr: don't see much other indication that this was a significant story}
-
-{other: regulations, privacy, security, fun}
-
-Blockstream are getting into [banking](https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/), being named as a strategic technology partner of Avanti Financial Group, a [new](https://avantibank.com/) US bank dedicated to digital assets.
-
-> Avanti is supported by a strategic technology partnership with Blockstream, the leading software company focused on the Bitcoin protocol. Terms were not disclosed.
+Blockstream are getting into banking, being named as a strategic technology partner of Avanti Financial Group, a [new](https://avantibank.com/) US bank dedicated to digital assets - [covered](https://coinspice.io/news/blockstream-bank-to-service-institutional-customers-plans-early-2021-opening/) by CoinSpice (with spicy illustrations). Terms were not disclosed.
 
 Casa is winding [down](https://www.coindesk.com/bitcoin-startup-casa-names-new-ceo-as-node-service-goes-open-source) its node hardware product, of which it has sold 2,000 units, and also [open](https://blog.keys.casa/open-sourcing-the-casa-node/) sourcing its code. Casa will focus on its $10/month subscription service for key management.
 
-Justin Sun of Tron had a busy month, [buying](https://news.bitcoin.com/steemit-for-sale-tron/) the content website steemit which is built on (and the main use of) the Steem blockchain and immediately announcing that steemit would be moving to the Tron blockchain. This led the Steem witnesses (block producers) to enact a soft [fork](https://www.coindesk.com/justin-sun-bought-steemit-steem-moved-to-limit-his-power) which would freeze the "Steemit Inc ninja-mined stake”, an unknown large quantity of STEEM held in a number of accounts by the company. On Mar 1, Justin [struck](https://www.coindesk.com/steem-community-mobilizes-popular-vote-in-battle-with-justin-sun) back by recruiting exchanges (Binance and Huobi) to vote for a set of witnesses under his control that would revert the soft fork and free the Steemit STEEM. After backlash from users it appeared that both [Binance](https://twitter.com/cz_binance/status/1234676941111742467) and [Huobi](https://medium.com/huobi-global/community-counts-a-letter-to-the-steem-community-340881448ea7) were going to unstake their STEEM and pull out of whatever arrangement they had with Sun. 
+Justin Sun of Tron had a busy month, [buying](https://news.bitcoin.com/steemit-for-sale-tron/) the content website steemit.com which is built on (and the main use of) the Steem blockchain and immediately announcing that steemit.com would be moving to the Tron blockchain. This led the Steem witnesses (block producers) to enact a soft [fork](https://www.coindesk.com/justin-sun-bought-steemit-steem-moved-to-limit-his-power) which would freeze the "Steemit Inc ninja-mined stake”, an unknown large quantity of STEEM held in a number of accounts by the company. On Mar 1, Justin [struck](https://www.coindesk.com/steem-community-mobilizes-popular-vote-in-battle-with-justin-sun) back by recruiting exchanges (Binance and Huobi) to vote for a set of witnesses under his control that would revert the soft fork and free the Steemit STEEM. After backlash from users it appeared that both [Binance](https://twitter.com/cz_binance/status/1234676941111742467) and [Huobi](https://medium.com/huobi-global/community-counts-a-letter-to-the-steem-community-340881448ea7) were going to unstake their STEEM and pull out of whatever arrangement they had with Sun. 
 
 There has also been some [suggestion](https://bitcoinexchangeguide.com/did-justin-sun-rig-super-rep-election-two-tron-dapps-received-votes-from-zion-account/) that Justin Sun used votes from the "Zion" account to interfere with community voting - which he [appeared](https://twitter.com/justinsuntron/status/1230215220884201472) to confirm, stating that it was temporary until 3 super representatives upgrade their software, to "prevent them from harming the network".
 
-IOTA's coordinator was turned off, [pausing](https://bitcoinist.com/iota-trinity-wallet-vulnerability-1-6-million-stolen/) the network, on Feb 13, to investigate claims of Trinity wallet thefts totalling $1.6 million. IOTA entered a state of elevated calamity when, after several days of down-time with the coordinator switched off, it was [revealed](https://blog.iota.org/trinity-attack-incident-part-1-summary-and-next-steps-8c7ccc4d81e8) that all the private keys of all users of the desktop Trinity client (maintained by the IOTA Foundation) had been compromised. 8.55 Ti of IOTA has been stolen, worth about $2.3 million at the time.  Trinity was compromised by malicious code inserted in a 3rd party dependency of the MoonPay service that enabled users to buy IOTA tokens directly within Trinity. The [latest](https://cointelegraph.com/news/iota-prepares-to-relaunch-network-in-one-week) is that there is a fixed version of Trinity and a seed migration tool and IOTA holders have 7 days to undergo the transfer procedure before the foundation re-starts the network between Mar 7 and Mar 10.  IOTA has lost 30% of its value in USD terms at time of writing (Mar 5), but users who hold their own IOTA have been unable to move them since the network was paused.
+IOTA's coordinator was turned off, [pausing](https://bitcoinist.com/iota-trinity-wallet-vulnerability-1-6-million-stolen/) the network, on Feb 13, to investigate claims of Trinity wallet thefts totalling $1.6 million. IOTA entered a state of elevated calamity when, after several days of down-time with the coordinator switched off, it was [revealed](https://blog.iota.org/trinity-attack-incident-part-1-summary-and-next-steps-8c7ccc4d81e8) that all the private keys of all users of the desktop Trinity client (maintained by the IOTA Foundation) had been compromised. 8.55 Ti of IOTA has been stolen, worth about $2.3 million at the time. Trinity was compromised by malicious code inserted in a 3rd party dependency of the MoonPay service that enabled users to buy IOTA tokens directly within Trinity. The [latest](https://cointelegraph.com/news/iota-prepares-to-relaunch-network-in-one-week) is that there is a fixed version of Trinity and a seed migration tool and IOTA holders have 7 days to undergo the transfer procedure before the foundation re-starts the network between Mar 7 and Mar 10. IOTA has lost 30% of its value in USD terms at time of writing (Mar 5), but users who hold their own IOTA have been unable to move them since the network was paused.
 
 Aragon Court [launched](https://blog.aragon.org/launching-aragon-court/), aiming to provide a digital jurisdiction for DAOs to operate in. In Aragon Court disputes are resolved by jurors who stake ANJ tokens and try to guess the decision that the majority of jurors will choose. 247 jurors signed up for the launch by collectively staking 1 million ANT (worth ~$1.3 million). To start with jurors are completing a "[precedence campaign](https://blog.aragon.org/precedence-campaign-primer/)" (juror training exercise) with [mock](https://twitter.com/Yazanator/status/1228752714873462784) disputes. 
 
