--- a/journal/202002.md
+++ b/journal/202002.md
@@ -10,6 +10,7 @@ _Image: {caption: "$title by $author. $optional-description" for artwork, or jus
 - 2019 marketing report
 - new PR down to work
 - { DEX progress? }
+- { decred.org update? }
 
 ## DCP0005 activation reminder
 
@@ -28,9 +29,7 @@ A lot of work in Feb was focused on reworking the secp256k1 package to introduce
 
 Some optimizations are harder to review so great care was taken to introduce them in steps and thoroughly document all techniques used. If you love when math and fast bit-level computation come together this should be a delightful read.
 
-{ what does this secp256k1 overhaul mean in the big picture, i.e. is it just for speed in general or a prerequisite for a feature? }
-
-In the big picture, the main benefits of the secp256k1 overhaul are improved speed and memory usage. Another important benefit is that once this is complete, secp256k1 operations will be constant time, which improves resistance to side-channel attacks. This is an important property for multiparty protocols that perform lots of signing. { like..? }
+In the big picture, the main benefits of the secp256k1 overhaul are improved speed and memory usage. Another important benefit is that once this is complete, secp256k1 operations will be constant time, which improves resistance to side-channel attacks. This is an important property for multiparty protocols that perform lots of signing, multisig Schnorr protocols being one example.
 
 Other improvements:
 
@@ -146,7 +145,8 @@ In development:
 
 Other:
 
-- https://bounty.decred.org/2020/02/status-update/
+- Bug Bounty program posted an [update](https://bounty.decred.org/2020/02/status-update/): 97 submissions processed so far (+14 since Oct update), with 11 being eligible for a payout (+1).
+- Developers looking how to start contributing can follow the [@dcrgoodfirst](https://twitter.com/dcrgoodfirst) Twitter account.
 
 Dev activity stats for February: 309 active PRs, 274 master commits, 52K added and 28K deleted lines spread across 20 repositories. Contributions came from 2-6 developers per repository.
 
