Network add link

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -200,7 +200,7 @@ Since late Jan the amount of [staked DCR](https://explorer.dcrdata.org/charts?ch
 
 Nodes: Throughout [February](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1580515200000&to=1583020800000) there was an average of 165 public listening nodes and 341 total nodes per dcr.farm. Average version distribution for Feb: 40.8% use dcrd v1.4, 18.2% use dcrd v1.5, 9.1% use dcrd v1.5 dev and RC builds, 12.3% use dcrd v1.5.1, 4.1% use dcrd v1.6 dev builds, 4.7% use dcrwallet v1.4, 2.6% use dcrwallet v1.5, 2.1% use dcrwallet v1.5.1.
 
-The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR was hit, equivalent of over $3 million. These numbers were mentioned by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
+The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply. Decred CoinJoin transactions mix between 50-100K DCR daily and on Feb 22 a new all-time high of 154K DCR [was hit](https://twitter.com/_Checkmatey_/status/1232746951294308356), equivalent of over $3 million. These numbers were mentioned by @Checkmate in Our Network [issue 10](https://ournetwork.substack.com/p/our-network-issue-10) ([tweet](https://twitter.com/spencernoon/status/1233450761566244865)). For current numbers, dcrdata alpha has deployed charts of [percentage](https://alpha.dcrdata.org/charts?chart=coin-supply&bin=day&axis=time&visibility=true%2Ctrue%2Ctrue) of mixed coins and the [DCR amount](https://alpha.dcrdata.org/charts?chart=privacy-participation&bin=day&axis=time&visibility=true%2Ctrue) mixed by day and by block.
 
 ## Integrations
 
