People drop removed contributors, remove Dustorf from code merged

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -152,15 +152,13 @@ Dev activity stats for February: 309 active PRs, 274 master commits, 52K added a
 
 ## People
 
-Welcome to new first time contributors with code merged to master: @mkingori ([dcrdata](https://github.com/decred/dcrdata/commits?author=mkingori)) and @Dustorf ([dcrblog](https://github.com/decred/dcrblog/commits?author=Dustorf)).
+Welcome to new first time contributors with code merged to master: @mkingori ([dcrdata](https://github.com/decred/dcrdata/commits?author=mkingori)).
 
 { any new DCCs issued in Feb? }
 
-Congratulations to [active contributors](https://decred.org/contributors/) listed on decred.org:
+Congratulations to new [contributors](https://decred.org/contributors/) listed on decred.org:
 
 - Mike Winslow (@Exitus, Media Production)
-
-The following people were removed from the list of [active contributors](https://decred.org/contributors/): Trace Trebilco, Mykolas Raižys. Thank you both for all the great work and don't hesitate to drop by again!
 
 Community stats:
 
