--- a/journal/202002.md
+++ b/journal/202002.md
@@ -229,6 +229,8 @@ On February 8th, Decred turned four, and the community celebrated the event with
 
 @Dustorf published a [Marketing Report](https://blog.decred.org/2020/02/26/Decred-2019-Marketing-Report/) detailing all project marketing related expenses in 2019. The report includes an examination of what worked and what didn't, as well as prescriptions for next year. The three high level recommendations include: imagine what can be achieved socially using the Decred technology stack, break the bubble to expand Decred beyond those currently in crypto, and leveraging the power of every individual within the community. The report calls for a decentralization of marketing efforts by geography. To that end, Latin America has already passed a proposal. The European proposal was made, but failed. It is expected that proposals for Brazil, United States, Canada, and Australia will be made in March.
 
+The [decred.org website](https://decred.org/) was revamped, with a new visual aesthetic, a new explainer video, and new subpages that feature Decred's history and its three tenets: Secure, Adaptable, and Sustainable. The website reflects agreed upon messaging that positions Decred as a superior store-of-value based upon those three tenets.  
+
 Decred in Depth released two episodes in February, [Decred, an Economic Breakthrough](https://decredindepth.libsyn.com/ammar-nasier-decred-an-economic-breakthrough) with @ammarooni and [DCR in LATAM](https://decredindepth.libsyn.com/elian-huesca-dcr-in-latam) with @elian. Additionally, @mr.black worked with @Checkmate and @permabullnino to release a new, trading-focused podcast titled [Rough Consensus](https://roughconsensus.libsyn.com/rough-consensus-1-rough-start).
 
 DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all work produced by the team, of which the latest comic is explains [Lightning Network](https://twitter.com/DCRComic/status/1229792848188444672).
