Governance fill numbers

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -174,7 +174,7 @@ Community stats:
 
 ## Governance
 
-In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,018 DCR and spent 12,622 DCR. Using February's daily average DCR/USD rate of ${n.nn}, this is ${n}K received and ${n}K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is ${n}K. As of Mar 2, Treasury balance is 643,179 DCR ($11.6 million USD at $18).
+In February the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 13,018 DCR and spent 12,622 DCR. Using February's daily average DCR/USD rate of $20.48, this is $267K received and $258K spent. At January's average daily rate of $18.00, the USD figure billed for work completed in that month is $227K. As of Mar 2, Treasury balance is 643,179 DCR ($11.6 million USD at $18).
 
 Our Network [issue 6](https://ournetwork.substack.com/p/our-network-issue-6) had an interesting chart with Treasury inflows and outflows. As of Jan 30, the Treasury has received a total of 939K DCR and spent 299K DCR.
 
@@ -337,8 +337,6 @@ Selected Twitter discussions:
 ## Markets
 
 In February DCR was trading between USD 16.71-24.75 / BTC 0.0019-0.0024. The average daily rate was $20.48.
-
-{markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis}
 
 ## Relevant External
 
