People add Feb DCCs

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -154,11 +154,9 @@ Dev activity stats for February: 309 active PRs, 274 master commits, 52K added a
 
 Welcome to new first time contributors with code merged to master: @mkingori ([dcrdata](https://github.com/decred/dcrdata/commits?author=mkingori)).
 
-{ any new DCCs issued in Feb? }
+Congratulations to new contractors granted the Decred Contractor Clearance via the new CMS process: [@dezryth](https://scottrchristian.com/) (marketing), [@guisso](https://github.com/fguisso) (development).
 
-Congratulations to new [contributors](https://decred.org/contributors/) listed on decred.org:
-
-- Mike Winslow (@Exitus, Media Production)
+Congratulations to new [contributors](https://decred.org/contributors/) listed on decred.org: Mike Winslow (@Exitus, Media Production).
 
 Community stats:
 
