Outreach add dezryth update

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -235,6 +235,8 @@ DCR Comic launched the [dcrcomic.org](https://dcrcomic.org/) website hosting all
 
 @Checkmate published an extremely interesting piece about the [ProgPoW debate](https://medium.com/@_Checkmatey_/observing-ethereum-governance-during-the-progpow-debate-9bf1aec724ad) in Ethereum describing the shortcomings of Ethereum's governance system and how Decred's tools and methodologies can be employed to solve them. It is an excellent example of inserting Decred's points of differentiation into wider conversations, and was well-received by many in the Ethereum community, including [David Hoffman](https://twitter.com/TrustlessState/status/1234653059424358400), co-host of the POV Crypto podcast.
 
+@dezryth posted the first [update](https://scottrchristian.com/2020/02/15/dezryth-proposal-updates/) for his proposal for the month of January.
+
 Monde PR came on board and quickly [established](https://github.com/decredcommunity/pr/pull/7) project public relations goals, target audiences, key messages, established credibility bullet points, documented key topics, performed a [competitor analysis](https://github.com/decredcommunity/pr/pull/8), documented all spokespeople, created key stories to pitch, and even began outreach, yielding a number of valuable placements:
 
 - An [article](https://cointelegraph.com/news/the-state-of-blockchain-experts-weigh-in-on-adoption-around-the-world) in Cointelegraph featuring @elian and @akin's commentary on the adoption of blockchain around the world.
