Integ move exchanges report to rel ext

--- a/journal/202002.md
+++ b/journal/202002.md
@@ -200,10 +200,7 @@ The amount of mixed coins (anonymity set) reached 20% of circulating DCR supply.
 
 ## Integrations
 
-Security news:
-
-- There have been a [report](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158343614832392oTHUs:decred.org) of a DCR holder taking losses to a scam Chrome extension for the Ledger wallet that asked for wallet seed. From the comments it looks like Google has removed it from the store but only after a few people got burned. Pay great attention to what software you trust the seed!
-- 12 exchanges were hacked in 2019 for a total damange of almost $300 million and 510,000 user logins, according to a January [report](https://cointelegraph.com/news/most-significant-hacks-of-2019-new-record-of-twelve-in-one-year) by Cointelegraph. Since a few of them had DCR listed, this is a reminder to be very cautious about where you deposit coins.
+There have been a [report](https://matrix.to/#/!MgQoetFiyjrHAywokv:decred.org/$158343614832392oTHUs:decred.org) of a DCR holder taking losses to a scam Chrome extension for the Ledger wallet that asked for wallet seed. From the comments it looks like Google has removed it from the store but only after a few people got burned. Pay great attention to what software you trust the seed!
 
 OKCoin decided to [suspend](https://blog.okcoin.com/scheduled-token-suspensions/) DCR trading because of low trading volume, despite being enthusiastic about Decred initially and even hosting several joint events.
 
@@ -367,6 +364,8 @@ Aragon Court [launched](https://blog.aragon.org/launching-aragon-court/), aiming
 DeFi project bZx has been at the center of a number of [stories](https://www.coindesk.com/everything-you-ever-wanted-to-know-about-the-defi-flash-loan-attack) about exploits this month, with its new "flash loan" feature being used in creative ways to set up series of transactions that manipulated price oracles and immediately profited from them. The novel aspect of these exploits is that the transactions are all processed in the same block, either there is a profit for the attacker or the transaction is not valid - making it very low risk for the attacker as they are not required to provide collateral. After the exploit, the master key was used to edit the smart contracts so that they could not be executed the same way.
 
 Another group came [forward](https://medium.com/@1inch.exchange/yes-we-hacked-bzx-fulcrum-but-one-month-ago-3f7e5c437ee3) to say they had warned bZx about a different issue a month earlier and were not impressed with their response, including refusing to pay a reasonable bounty based on a technicality.
+
+12 exchanges were hacked in 2019 for a total damange of almost $300 million and 510,000 user logins, according to a January [report](https://cointelegraph.com/news/most-significant-hacks-of-2019-new-record-of-twelve-in-one-year) by Cointelegraph. This serves as a reminder to be cautious when selecting an exchange to send coins to.
 
 ## About This Issue
 
